fix css overflow

--- a/public/css/headerSite.css
+++ b/public/css/headerSite.css
@@ -7,6 +7,7 @@
     min-width: 380px;
     width: 380px;
     box-sizing: border-box;
+    overflow: auto;
 }
 
 .headerSite .headerContent {
